# mrge-data-team-ai-vscode

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  PYTHON_ENV_GUIDE.md  PYTHON_SETUP_SUMMARY.md  README.md  poetry.toml  pyproject.toml
.github/: copilot-instructions.md
.github/copilot-docs/: airflow.md  atlassian.md  aws-cli.md  backfill.md  databricks.md  dbt.md  github.md  merge-requests.md  pull-requests.md  tableau.md
.github/pr-descriptions/: .gitkeep
tests/: conftest.py  test_environment.py
