[tool.poetry]
name = "mrge-data-team-workspace"
package-mode = false
version = "1.0.0"
description = "Unified Python environment for MRGE Data Team workspace"
authors = ["DataTeam <data@mrge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.14"
# Cloud & Infrastructure
boto3 = "^1.34.144"
s3fs = "2025.7.0"
databricks-sdk = ">=0.47,<0.48.0"

# Data Processing
polars = ">=1.32.0,<2.0"
pandas = "2.1.4"
duckdb = ">=1.3.2,<2.0"

# Airflow & Orchestration
apache-airflow = {version = "2.10.3", extras = ["cncf-kubernetes"]}
apache-airflow-providers-databricks = ">=7.6.0,<8.0"
apache-airflow-providers-amazon = "^9.15.0"
apache-airflow-providers-slack = "^9.2.0"
astronomer-cosmos = "^1.11.0"

# dbt
dbt-core = "1.10.6"
dbt-databricks = "^1.10.6"
dbt-redshift = "^1.9.5"

# Utilities
jinja2 = "^3.1.4"
python-ulid = "^2.7.0"
pyyaml = "^6.0.3"
requests = "^2.32.5"
typer = "^0.20.0"
graphviz = "^0.21"

# Monitoring & Alerts
opsgenie-sdk = "2.1.5"

# Data Sources
yfinance = "0.2.65"
pycountry = "24.6.1"
babel = "2.17.0"
postgres = "^4.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

# Code Quality
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pylint = "^3.2.0"
pre-commit = "^3.7.0"

# Development Tools
ipykernel = "^6.29.5"
ipython = "^8.25.0"
jupyter = "^1.0.0"

# Documentation
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.ci.dependencies]
flask-limiter = "3.12"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
line-length = 120
target-version = ["py311"]
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | venv
  | env
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | build
  | dist
  | target
  | dbt_packages
  | site-packages
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["mrge_group"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = """
    -v
    --cov=.
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
"""

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.main]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]
max-line-length = 120

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "target",
    "dbt_packages",
]
skips = ["B101", "B601"]
